获取用户信息时返回角色 id 列表